# kiln

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  README.md  plan.md  spec.md
.github/workflows/: ci.yml  release.yml
config/: kiln.example.toml  kiln.kubectl-opencode.example.toml  kiln.local-opencode.example.toml
docs/: design.md  integration-testing.md  opencode-agent.md
examples/opencode/: Dockerfile  agent.sh  k8s-secret.example.yaml  local-agent.sh  local.env.example
src/: audit.rs  command.rs  config.rs  domain.rs  execution.rs  github.rs  lib.rs  main.rs  policy.rs  recovery.rs  runtime.rs  server.rs  signature.rs
tests/: webhook.rs
